renaming menu-api to catalog-api on manifests folder

--- a/k8s-kustomize/services/catalog-api/base/config.env
+++ b/k8s-kustomize/services/catalog-api/base/config.env
@@ -1,4 +1,4 @@
 auth.authority=http://identity-api
-db.host=menu-pgsql-database
+db.host=catalog-pgsql-database
 env=Development
-base.path=/menu
+base.path=/catalog
