--- a/k8s-kustomize/services/catalog-api/base/menu-pgsql.yaml
+++ b/k8s-kustomize/services/catalog-api/base/menu-pgsql.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: menu-pgsql-database
+  name: catalog-pgsql-database
   namespace: default
 spec:
   selector:
     matchLabels:
-      app: menu-pgsql-database # has to match .spec.template.metadata.labels
-  serviceName: "menu-pgsql-database"
+      app: catalog-pgsql-database # has to match .spec.template.metadata.labels
+  serviceName: "catalog-pgsql-database"
   replicas: 1 # by default is 1
   template:
     metadata:
       labels:
-        app: menu-pgsql-database # has to match .spec.selector.matchLabels
+        app: catalog-pgsql-database # has to match .spec.selector.matchLabels
     spec:
       terminationGracePeriodSeconds: 10
       containers:
-      - name: menu-pgsql-database
+      - name: catalog-pgsql-database
         image: postgres:alpine
         env:
         - name: PGDATA
@@ -24,17 +24,17 @@ spec:
         - name: POSTGRES_DB
           valueFrom:
             secretKeyRef:
-              name: menu-api
+              name: catalog-api
               key: db.name
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: menu-api
+              name: catalog-api
               key: db.password
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: menu-api
+              name: catalog-api
               key: db.username
         volumeMounts:
           - mountPath: /var/lib/postgresql/data/pgdata
@@ -55,12 +55,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: menu-pgsql-database
-  name: menu-pgsql-database
+    app: catalog-pgsql-database
+  name: catalog-pgsql-database
 spec:
   type: LoadBalancer
   ports:
   - port: 5432
     targetPort: 5432
   selector:
-    app: menu-pgsql-database
+    app: catalog-pgsql-database
