--- a/k8s-kustomize/services/catalog-api/base/deployment.yaml
+++ b/k8s-kustomize/services/catalog-api/base/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: menu-api
+  name: catalog-api
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: menu-api
+      app: catalog-api
   template:
     metadata:
       labels:
-        app: menu-api
+        app: catalog-api
     spec:
       containers:
-      - name: menu-api
-        image: menu-api # must much from ./kustomization.yaml -> images[0].name
+      - name: catalog-api
+        image: catalog-api # must much from ./kustomization.yaml -> images[0].name
         imagePullPolicy: Always 
         ports:
           - containerPort: 80
@@ -24,42 +24,42 @@ spec:
         - name: ASPNETCORE_ENVIRONMENT
           valueFrom:
             configMapKeyRef:
-              name: menu-api
+              name: catalog-api
               key: env
         - name: PATH_BASE
           valueFrom:
             configMapKeyRef:
-              name: menu-api
+              name: catalog-api
               key: base.path
         - name: DB_HOST
           valueFrom:
             configMapKeyRef:
-              name: menu-db
+              name: catalog-db
               key: db.host
         - name: DB_NAME
           valueFrom:
             secretKeyRef:
-              name: menu-db
+              name: catalog-db
               key: db.name
         - name: DB_USER
           valueFrom:
             secretKeyRef:
-              name: menu-db
+              name: catalog-db
               key: db.username
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: menu-db
+              name: catalog-db
               key: db.password
         - name: AUTH_URL
           valueFrom:
             configMapKeyRef:
-              name: menu-api
+              name: catalog-api
               key: auth.url
         - name: AUTH_AUTHORITY
           valueFrom:
             configMapKeyRef:
-              name: menu-api
+              name: catalog-api
               key: auth.authority
         readinessProbe:
           httpGet:
