--- a/k8s-kustomize/services/catalog-api/base/http-route.yaml
+++ b/k8s-kustomize/services/catalog-api/base/http-route.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
-  name: menu-api
+  name: catalog-api
 spec:
   parentRefs:
   - kind: Gateway
@@ -11,7 +11,7 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /menu
+        value: /catalog
     backendRefs:
-    - name: menu-api
+    - name: catalog-api
       port: 80
