--- a/k8s-kustomize/services/catalog-api/base/service.yaml
+++ b/k8s-kustomize/services/catalog-api/base/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: menu-api
+  name: catalog-api
 spec:
   type: ClusterIP
   ports:
   - port: 80
     name: http
   selector:
-    app: menu-api
+    app: catalog-api
