--- a/k8s-kustomize/services/catalog-api/dev/kustomization.yaml
+++ b/k8s-kustomize/services/catalog-api/dev/kustomization.yaml
@@ -10,6 +10,6 @@ patchesStrategicMerge:
   - "http_route_patch.yaml"
 
 configMapGenerator:
-  - name: menu-api
+  - name: catalog-api
     envs: [config.env]
     behavior: merge
