--- a/.github/workflows/payment-api.yml
+++ b/.github/workflows/payment-api.yml
@@ -15,8 +15,7 @@ on:
     - ".github/workflows/payment-api.yml"
 
 jobs:
-  payment-api-ci:
+  build-release:
     uses: ./.github/workflows/build-release.yml
     with:
       service-name: payment-api
-    secrets: inherit
