--- a/src/backend/docker/docker-compose.grafana.yaml
+++ b/src/backend/docker/docker-compose.grafana.yaml
@@ -1,8 +1,6 @@
 ---
 version: "3"
 
-networks:
-  loki:
 
 services:
   read:
@@ -21,10 +19,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks: &loki-dns
-      loki:
-        aliases:
-          - loki
 
   write:
     image: grafana/loki:2.7.1
@@ -42,9 +36,6 @@ services:
       retries: 5
     depends_on:
       - minio
-    networks:
-      <<: *loki-dns
-
   promtail:
     image: grafana/promtail:2.7.1
     volumes:
@@ -53,8 +44,6 @@ services:
     command: -config.file=/etc/promtail/config.yaml
     depends_on:
       - gateway
-    networks:
-      - loki
 
   minio:
     image: minio/minio
@@ -79,35 +68,19 @@ services:
       interval: 15s
       timeout: 20s
       retries: 5
-    networks:
-      - loki
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:9.4.3
     environment:
-      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
     depends_on:
       - gateway
-    entrypoint:
-      - sh
-      - -euc
-      - |
-        mkdir -p /etc/grafana/provisioning/datasources
-        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
-        apiVersion: 1
-        datasources:
-          - name: Loki
-            type: loki
-            access: proxy
-            url: http://gateway:3100
-            jsonData:
-              httpHeaderName1: "X-Scope-OrgID"
-            secureJsonData:
-              httpHeaderValue1: "tenant1"
-        EOF
-        /run.sh
+      - tempo
+    volumes:
+      - ./grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
     ports:
       - "3000:3000"
     healthcheck:
@@ -115,8 +88,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - loki
 
   gateway:
     image: nginx:latest
@@ -184,5 +155,3 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - loki
