--- a/src/backend/docker/docker-compose.yml
+++ b/src/backend/docker/docker-compose.yml
@@ -22,8 +22,9 @@ services:
   basket-api:
     image: restaurant/basket-api
     container_name: basket
-    build: ./services/basket.api/
+    build: ./services/basket-api/
     depends_on:
+      - otel-collector
       - redis
 
   order-api:
@@ -33,7 +34,7 @@ services:
       platforms:
         - "linux/arm64"
       context: ./services/order-api
-      dockerfile: local.Dockerfile
+      dockerfile: Dockerfile
     depends_on:
       - order-db
       - payment-api
@@ -46,9 +47,6 @@ services:
     build: ./services/payment-api
     ports:
       - 8083:8080
-    environment:
-      - ENABLE_TEST_CARDS=true
-   
 
   # dashboard-app:
   #   image: restaurant/dashboard-app
