--- a/src/backend/docker/grafana-datasources.yaml
+++ b/src/backend/docker/grafana-datasources.yaml
@@ -17,7 +17,11 @@ datasources:
 - name: Loki
   type: loki
   access: proxy
-  url: http://gateway:3100
+  url: http://loki:3100
+  basicAuth: false
+  isDefault: true
+  version: 1
+  editable: false
   jsonData:
     httpHeaderName1: "X-Scope-OrgID"
   secureJsonData:
@@ -29,7 +33,6 @@ datasources:
   orgId: 1
   url: http://tempo:3200
   basicAuth: false
-  isDefault: true
   version: 1
   editable: false
   apiVersion: 1
