Adding Checkout API with Express + Typescript = ❤️ (#114)
* Adding Express + Typescript = ❤️

* adding logging

* Add and Implement GRPC service

Getting Cart items for the given CustomerID

* fix pr builds

* fix tags

* Adding grpc clients to node.js

* Otel setup for node.js applications

* Adding checkout flow, implementing getCartItems and Payment grpc clients

* publishing checkout event into kafka

* tslint and adding swagger UI

* removing checkout handler from basket API

* Adding unit tests for Checkout API

* Adding README.md for checkout-api

* Adding more devoloper context for Checkout API

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -76,13 +76,12 @@ jobs:
           fi
 
       - name: Build and Push
-        if: github.ref == 'refs/heads/develop'
         uses: docker/build-push-action@v4
         with:
           context: src/backend/services/${{ inputs.service-name }}
           file: src/backend/services/${{ inputs.service-name }}/${{ inputs.docker-file }}
           push: ${{ steps.build-metadata.outputs.push }}
-          tags: ghcr.io/chayxana/${{ inputs.service-name }}:${{ steps.version.outputs.new-version }}
+          tags: ${{ steps.metadata.outputs.tags }} 
           cache-from: type=registry,ref=ghcr.io/chayxana/${{ inputs.service-name }}:build-cache
           cache-to: ${{ steps.build-metadata.outputs.cache-to }}
 
