--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,4 @@ src/backend/services/identity.api/identity-api-release
 src/backend/services/catalog-api/target
 src/backend/web/web.admin/dashboard/.angular
 src/backend/docker/.data
+src/backend/services/basket-api/basket-api
