--- a/src/backend/docker/promtail-local-config.yaml
+++ b/src/backend/docker/promtail-local-config.yaml
@@ -7,16 +7,14 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://loki:3100/loki/api/v1/push
-    tenant_id: tenant1
+  - url: http://otel-collector:3500/loki/api/v1/push
 
 scrape_configs:
-  - job_name: flog_scrape 
+  - job_name: flog_scrape
     docker_sd_configs:
       - host: unix:///var/run/docker.sock
         refresh_interval: 5s
     relabel_configs:
-      - source_labels: ['__meta_docker_container_name']
-        regex: '/(.*)'
-        target_label: 'container'
-
+      - source_labels: ["__meta_docker_container_name"]
+        regex: "/(.*)"
+        target_label: "container"
