--- a/src/backend/services/checkout-api/package.json
+++ b/src/backend/services/checkout-api/package.json
@@ -4,15 +4,15 @@
   "description": "Checkout API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "build": "tsc",
+    "start": "bun src/index.ts",
+    "build": "bun build ./src/index.ts --outfile=dist/index.js --target=node",
     "tslint": "./node_modules/.bin/tslint --project tsconfig.json"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.10",
     "@types/sinon": "^10.0.14",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -22,18 +22,19 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "sinon": "^15.0.4",
-    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^5.0.2"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.13",
     "@grpc/proto-loader": "^0.7.6",
+    "@opentelemetry/api": "^1.6.0",
     "@opentelemetry/auto-instrumentations-node": "^0.36.4",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.37.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.37.0",
     "@opentelemetry/instrumentation-express": "^0.32.1",
     "@opentelemetry/sdk-node": "^0.37.0",
+    "bun-types": "^1.0.2",
     "dotenv": "^16.0.3",
     "kafkajs": "^2.2.4",
     "opentelemetry-instrumentation-kafkajs": "^0.35.0",
